# voxel-engine

./: .gitignore  Cargo.toml  LICENSE  bacon.toml  client.ron  profiler-build.ps1  readme.md  renderdoc.cap  wesl.toml
assets/defs/: blocks.ron
assets/fonts/: custom.aseprite  custom.ron  dogica_bold.ron
assets/textures/: gold.aseprite  grass.aseprite  grass_entity.aseprite  grass_side.aseprite  tree_end.aseprite  tree_leaves.aseprite  tree_side.aseprite
engine/: Cargo.toml  build.rs
engine/assets/shaders/: fullscreen_vertex.wesl
engine/assets/shaders/common/: chunk.wesl  common.wesl
engine/assets/shaders/passes/: sky.wesl  world_geo_draw.wesl  world_geo_generate_commands.wesl
engine/assets/shaders/postfx/: fxaa.wesl  noise.wesl
engine/assets/textures/: dirt.aseprite
engine/src/: application.rs  camera.rs  chunk_loader.rs  config.rs  game_loop.rs  game_window.rs  lib.rs  limits.rs  loader_job_queue.rs  player.rs  world.rs  world_stats.rs
engine/src/assets/: blocks.rs  fonts.rs  mod.rs  world_textures.rs
engine/src/config/: config_manager.rs  engine_config.rs  mod.rs
engine/src/gameplay/: fps_controller.rs  mod.rs
engine/src/gameplay/physics/: mod.rs  world_collider.rs
engine/src/math/: aabb.rs  abstract_vec.rs  axis.rs  basis.rs  frustum.rs  local_vec.rs  mod.rs  plane.rs  rectangle.rs
engine/src/memory/: pool.rs
engine/src/mesh_generation/: chunk_mesh.rs  chunk_mesh_generator.rs  chunk_mesh_generator_input.rs  greedy_mesher.rs  mod.rs
engine/src/rendering/: allocator.rs  chunk_mesh.rs  chunk_mesh_generator.rs  common.rs  gpu_allocator.rs  material_manager.rs  mod.rs  postfx.rs  postfx_constants.rs  render_camera.rs  resolution.rs  texture.rs  texture_manager.rs  world_renderer.rs
engine/src/rendering/memory/: buddy_allocator.rs  gpu_heap.rs  gpu_pool.rs  mod.rs  pool.rs  typed_buffer.rs
engine/src/rendering/mesh_generations/: greedy_mesher.rs
engine/src/rendering/passes/: mod.rs  world_geo.rs
engine/src/rendering/passes/postfx/: fxaa.rs  mod.rs  noise.rs  postfx.rs
engine/src/rendering/util/: bind_group_builder.rs
engine/src/visibility/: mod.rs  potentially_visible.rs
engine/src/voxels/: border.rs  chunk.rs  coord.rs  face.rs  mod.rs  packed_chunk.rs  unpacked_chunk.rs  voxel.rs  world.rs
engine/src/worldgen/: mod.rs  noise_world_generator.rs  test_world_generators.rs  text_generator.rs  world_generator.rs
game/: Cargo.toml
game/src/: application.rs  client_game.rs  client_types.rs  config.rs  fps_counter.rs  main.rs
game/src/egui/: chunk_inspector.rs  egui_instance.rs  mod.rs  timeline.rs  world_stats.rs
renderdoc/: formats.md
renderer/: Cargo.toml  build.rs
renderer/assets/shaders/common/: common.wesl  packed_face.wesl
renderer/assets/shaders/passes/: chunk_bounds.wesl  sky.wesl  world_geo_draw.wesl  world_geo_generate_commands.wesl  world_geo_reset.wesl
renderer/assets/shaders/postfx/: common.wesl  noise.wesl
renderer/src/: interpolated.rs  lib.rs  renderer.rs  renderer_config.rs  renderer_types.rs
renderer/src/rendering/: buffer_update_batcher.rs  chunk_mesh.rs  chunk_mesh_generator.rs  limits.rs  mod.rs  postfx.rs  postfx_constants.rs  render_camera.rs  resolution.rs  texture_manager.rs  world_renderer.rs
renderer/src/rendering/memory/: buddy_allocator.rs  gpu_heap.rs  gpu_pool.rs  mod.rs  typed_buffer.rs
renderer/src/rendering/mesh_generation/: chunk_mesh_generator.rs  chunk_mesh_generator_input.rs  greedy_mesher.rs  mod.rs
renderer/src/rendering/mesh_generations/: greedy_mesher.rs  mod.rs
renderer/src/rendering/passes/: chunk_bounds.rs  mod.rs  render_common.rs  sky.rs  world_geo.rs
renderer/src/rendering/passes/postfx/: mod.rs  postfx_pass.rs
renderer/src/rendering/util/: bind_group_builder.rs  mod.rs
