[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bitfield-struct = "0.12.1"
bytemuck = "1.24.0"
dashmap = "6.1.0"
debounce = "0.2.2"
env_logger = "0.11.8"
glam = { version = "0.30.9", features = ["serde", "bytemuck"] }
log = "0.4.29"
pollster = "0.4.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "28.0.0"
winit = "0.30.12"
