[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bitfield-struct = "0.12.1"
bytemuck = "1.24.0"
dashmap = "6.1.0"
debounce = "0.2.2"
glam = { version = "0.30.9", features = ["serde", "bytemuck"] }
id-arena = "2.2.1"
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.29"
noise = "0.9.0"
ordered-float = "5.1.0"
pollster = "0.4.0"
pretty_env_logger = "0.5.0"
profiling = "1.0.17"
rayon = "1.11.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tinyvec = "1.10.0"
wgpu = "28.0.0"
winit = "0.30.12"

[build-dependencies]
wesl = "0.3.1"

[features]
superluminal = ["profiling/profile-with-superluminal"]
