[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bitfield-struct = "0.12.1"
bytemuck = "1.24.0"
dashmap = "6.1.0"
glam = { version = "0.30.9", features = ["serde", "bytemuck"] }
id-arena = "2.2.1"
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.29"
nalgebra = { version = "0.34.1", features = ["glam030"] }
noise = "0.9.0"
ordered-float = "5.1.0"
parry3d = "0.25.3"
profiling = "1.0.17"
rapier3d = { version = "0.31.0", features = ["simd-stable", "parallel"] }
rayon = "1.11.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tinyvec = "1.10.0"
wgpu = "28.0.0"
debounce = "0.2.2"
crossbeam-channel = "0.5.15"
splines = { version = "5.0.0", features = ["glam"] }
crossbeam = "0.8.4"

[features]
superluminal = ["profiling/profile-with-superluminal"]
