[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
renderer = { path = "../renderer" }
anyhow = "1"
winit = "0.30.12"
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
pollster = "0.4.0"
profiling = "1.0.17"
# Using code from this PR, because at the time of writing winit doesn't support wgpu 0.28 yet
# https://github.com/emilk/egui/pull/7789
egui = { git = "https://github.com/emilk/egui.git", rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67", default-features = false, features = [
    "winit",
] }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "4a9fc7e6417b9ca838b880f2a89fd16468aece67" }
bytesize = "2.3.1"

[features]
superluminal = ["engine/superluminal"]
